syntax = "proto3";

package BSSE.protocol;

option go_package="service/proto";

message RequestKey {
  bytes key = 1;
  bytes bucketName = 2;
}

message RequestKeys {
  repeated bytes keys = 2;
  bytes bucketName = 1;
}

message RangeKey {
  bytes start = 1;
  bytes end = 2;
}

message ArrayRangeKey {
  bytes bucketName = 1;
  repeated RangeKey rangeKey = 2;
}

message ReturnVal {
  Status s = 1;
  VValue val = 2;
}

message ReturnVals {
  Status s = 1;
  repeated VValue val = 2;
}

message ReturnKVs {
  Status s = 1;
  repeated KV kvs = 2;
}

message RootHash {
  Status s = 1;
  bytes rh = 2;
}

message KV {
  bytes key = 1;
  VValue val = 2;
}

message Status {
  uint32 code = 1;
  string msg = 2;
}

message KVs {
  repeated KV kvs = 1;
}

message RequestKV {
  KV kv = 1;
  bytes bucketName = 2;
}

message RequestKVs {
  KVs kvs = 1;
  bytes bucketName = 2;
}

message InitParam {
  string path = 1;
  // unused currently
  bool delete_if_exists = 2;
}

message Bucket {
  bytes bucketName = 1;
}

message Empty {}

message Version {
  uint64 block_num = 1;
  uint64 tx_num = 2;
}

message VValue {
  bytes val = 1;
  Version version = 2;
}



service StorageService {
  rpc Set (RequestKV) returns (Status) {}
  rpc SetBatch (RequestKVs) returns (Status) {}
  rpc Get (RequestKey) returns (ReturnVal) {}
  rpc GetBatch (RequestKeys) returns (ReturnVals) {}
  rpc InitDatabase (InitParam) returns (Status) {}
  rpc GetRootHash (Bucket) returns (RootHash) {}
  rpc CloseDB (Empty) returns (Status) {}
  rpc Del (RequestKey) returns (Status) {}
  rpc DelBatch(RequestKeys) returns (Status) {}
  rpc RangeQuery (ArrayRangeKey) returns (ReturnKVs) {}
}
